@@ -1,8 +1,8 @@
 package com.prx.jobs.backend.api.controller;
 
-import com.prx.jobs.backend.api.service.SourceTypeServiceImpl;
-import com.prx.jobs.backend.api.to.SourceTypeListResponse;
-import com.prx.jobs.backend.api.to.SourceTypeTO;
+import com.prx.jobs.backend.api.service.CompanyServiceImpl;
+import com.prx.jobs.backend.api.to.CompanyListResponse;
+import com.prx.jobs.backend.api.to.CompanyTO;
 import io.restassured.module.mockmvc.RestAssuredMockMvc;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -16,34 +16,43 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MvcResult;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 import static com.prx.jobs.backend.util.JobsConstants.JOBS_PATH;
 import static io.restassured.module.mockmvc.RestAssuredMockMvc.given;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(value = {SpringExtension.class})
-class SourceTypeControllerTest {
+class CompanyApiTest {
 
     private static final String PATH;
 
     static {
-        PATH = JOBS_PATH + "/source-types";
+        PATH = JOBS_PATH + "/companies";
     }
 
     @MockBean
-    private SourceTypeServiceImpl sourceTypeService;
+    CompanyServiceImpl companyService;
 
     @BeforeEach
-    void setUp() {
-        RestAssuredMockMvc.standaloneSetup(new SourceTypeController(sourceTypeService));
+    public void setUp() {
+        RestAssuredMockMvc.standaloneSetup(new CompanyApiController(companyService));
     }
 
     @Test
-    @DisplayName("Should return source type list when includeInactive is true")
-    void listIncludesInactiveSourceTypesWhenRequested() {
-        when(sourceTypeService.list(true)).thenReturn(ResponseEntity.ok(new SourceTypeListResponse(
-                Collections.singletonList(new SourceTypeTO(UUID.randomUUID(), "Test", "Test", false)))));
+    void getServiceTest() {
+        var companyApi = new CompanyApi(){};
+        assertNotNull(companyApi.getService());
+    }
+
+    @Test
+    @DisplayName("Should return company list when includeInactive is true")
+    void shouldReturnCompanyListWhenIncludeInactiveIsTrue() {
+        CompanyTO companyTO = new CompanyTO(UUID.randomUUID(), "name", "description", false);
+        CompanyListResponse companyListResponse = new CompanyListResponse(List.of(companyTO));
+        when(companyService.list(true)).thenReturn(ResponseEntity.ok(companyListResponse));
 
         given().contentType(MediaType.APPLICATION_JSON_VALUE)
                 .accept(MediaType.APPLICATION_JSON_VALUE).when().get(PATH + "?includeInactive=true")
@@ -51,10 +60,10 @@ class SourceTypeControllerTest {
     }
 
     @Test
-    @DisplayName("Should return source type list when includeInactive is false")
-    void listExcludesInactiveSourceTypesWhenRequested() {
-        when(sourceTypeService.list(false)).thenReturn(ResponseEntity.ok(new SourceTypeListResponse(
-                Collections.emptyList())));
+    @DisplayName("Should return company list when includeInactive is false")
+    void shouldReturnCompanyListWhenIncludeInactiveIsFalse() {
+        CompanyListResponse companyListResponse = new CompanyListResponse(Collections.emptyList());
+        when(companyService.list(false)).thenReturn(ResponseEntity.ok(companyListResponse));
 
         given().contentType(MediaType.APPLICATION_JSON_VALUE)
                 .accept(MediaType.APPLICATION_JSON_VALUE).when().get(PATH + "?includeInactive=false")
